--- a/projects/async/towns.html
+++ b/projects/async/towns.html
@@ -1,12 +1,23 @@
+<style>
+    /* #loading-failed {
+        display: none;
+    } */
+
+    .hidden {
+        display: none;
+    }
+   
+</style>
 <div id="app">
     <div id="loading-block">Загрузка...</div>
-    <div id="loading-failed">
+    <div id="loading-failed" class="hidden">
         <div>Не удалось загрузить города</div>
         <button id="retry-button">Повторить</button>
     </div>
-    <div id="filter-block">
+    <div id="filter-block" class="hidden">
         <input id="filter-input" placeholder="название города" type="text">
 
         <div id="filter-result"></div>
     </div>
 </div>
+<script src="index.js"></script>
